yaml/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
# set your user name
  name: <userName>-hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
# set your user name
      app: <userName>-hello-world
  template:
    metadata:
      labels:
# set your user name
        app: <userName>-hello-world
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: hello-world
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
# update with the iamge you build in part 1
          image: 'quay.io/<userName>/<imageName>:<Tag>'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
